--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
              align-items: center;
           	gap: 0.5rem;
          }
+         .source-link {
+             padding-top: 2rem;
+         }
          p {
          	padding: 0;
           	margin: 0;
@@ -129,6 +132,7 @@
           Memory: <span id="memoryUsed">-</span>/<span id="memoryTotal">-</span>
         </p>
       </div>
+      <a class="source-link" href="http://github.com/stevedylandev/pi-widget" target="_blank">Source Code</a>
     </div>
     <script>
       function formatBytes(bytes, decimals = 2) {
