--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
          .source-link {
              padding-top: 2rem;
          }
+         .link-container {
+             display: flex;
+             justify-content: flex-start;
+             align-items: center;
+             gap: 1rem;
+         }
          p {
          	padding: 0;
           	margin: 0;
@@ -132,7 +138,10 @@
           Memory: <span id="memoryUsed">-</span>/<span id="memoryTotal">-</span>
         </p>
       </div>
+      <div class="link-container">
       <a class="source-link" href="http://github.com/stevedylandev/pi-widget" target="_blank">Source Code</a>
+      <a class="source-link" href="https://stevedylan.dev" target="_blank">Homepage</a>
+      </div>
     </div>
     <script>
       function formatBytes(bytes, decimals = 2) {
