update meta tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:site_name" content="Steve's Pi" />
     <meta
       property="og:image"
-      content="https://stevedylan.dev/social-card.png"
+      content="https://stevedylan.dev/pi.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
