--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
              padding: 0;
              margin: 0 1rem 0 1rem;
              box-sizing: border-box;
-             background: #121212;
-             color: #C1C1C1;
+             background: #000000;
+             color: #FFFFFF;
              font-family: 'CommitMono', sans-serif;
          }
          body {
@@ -85,7 +85,7 @@
           	margin: 0;
          }
          a {
-             color:#C1C1C1;
+             color:#FFFFFF;
          }
          img {
              height: 24px;
