update font size

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
              min-height: 90vh;
              max-width: 500px;
              margin: auto;
+             font-size: 14px;
          }
          .stats-container {
          	display: flex;
